--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "bugs": "https://github.com/kaibyao/weissman-json/issues",
   "devDependencies": {
     "eslint": "^5.6.1",
+    "eslint-plugin-jest": "^21.24.1",
     "jest": "^23.6.0"
   }
 }
