--- a/package.json
+++ b/package.json
@@ -14,9 +14,25 @@
     "compression"
   ],
   "bugs": "https://github.com/kaibyao/weissman-json/issues",
+  "lint-staged": {
+    "*.js": [
+      "prettier",
+      "eslint --fix",
+      "jest",
+      "git add"
+    ],
+    "*.json": [
+      "prettier"
+    ]
+  },
+  "scripts": {
+    "precommit": "lint-staged"
+  },
   "devDependencies": {
     "eslint": "^5.6.1",
     "eslint-plugin-jest": "^21.24.1",
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "lint-staged": "^7.3.0",
+    "prettier": "^1.14.3"
   }
 }
