--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "compression"
   ],
   "bugs": "https://github.com/kaibyao/weissman-json/issues",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "*.js": [
       "prettier",
@@ -25,12 +30,10 @@
       "prettier"
     ]
   },
-  "scripts": {
-    "precommit": "lint-staged"
-  },
   "devDependencies": {
     "eslint": "^5.6.1",
     "eslint-plugin-jest": "^21.24.1",
+    "husky": "^1.1.2",
     "jest": "^23.6.0",
     "lint-staged": "^7.3.0",
     "prettier": "^1.14.3"
