--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
   },
   "plugins": ["jest"],
   "rules": {
-    "indent": ["error", 2],
+    "indent": ["off", 2],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
     "semi": ["error", "always"]
