--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "jest": "^23.6.0",
     "lint-staged": "^7.3.0",
     "prettier": "^1.14.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.11"
   }
 }
