--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weissman-json",
   "version": "1.0.1",
   "description": "A JSON compression library. Said to achieve the theoretical score of 5.2.",
-  "main": "index.js",
+  "main": "dist/weissman-json.js",
   "homepage": "https://github.com/kaibyao/weissman-json",
   "repository": "git@github.com:kaibyao/weissman-json.git",
   "author": "Kai Yao <kai.b.yao@gmail.com>",
@@ -30,13 +30,27 @@
       "prettier"
     ]
   },
+  "sideEffects": false,
+  "scripts": {
+    "build": "webpack --config=webpack.prod.js"
+  },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@webpack-cli/init": "^0.1.2",
+    "babel-core": "^7.0.0-bridge",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
     "eslint": "^5.6.1",
     "eslint-plugin-jest": "^21.24.1",
     "husky": "^1.1.2",
     "jest": "^23.6.0",
     "lint-staged": "^7.3.0",
-    "prettier": "^1.14.3"
+    "prettier": "^1.14.3",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "lodash": "^4.17.11"
