added build to precommit

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "*.js": [
       "prettier",
       "eslint --fix",
-      "jest",
+      "jest --passWithNoTests",
+      "yarn run build",
       "git add"
     ],
     "*.json": [
