--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weissman-json",
   "version": "1.0.2",
   "description": "A JSON compression library. Said to achieve the theoretical score of 5.2.",
-  "main": "dist/weissman-json.js",
+  "main": "dist/weissman.js",
   "homepage": "https://github.com/kaibyao/weissman-json",
   "repository": "git@github.com:kaibyao/weissman-json.git",
   "author": "Kai Yao <kai.b.yao@gmail.com>",
