added weissman to list of keywords, as apparently it’s an actual thing now

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "keywords": [
     "json",
     "compress",
-    "compression"
+    "compression",
+    "weissman"
   ],
   "bugs": "https://github.com/kaibyao/weissman-json/issues",
   "husky": {
