--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,15 @@
 {
   "plugins": ["@babel/plugin-syntax-dynamic-import"],
   "presets": [
-    ["@babel/preset-env", { "modules": false }]
+    [
+      "@babel/preset-env",
+      { "modules": false, "targets": "ie >= 8" }
+    ]
   ],
 
   "env": {
     "test": {
-      "presets": [
-        ["@babel/preset-env"]
-      ]
+      "presets": [["@babel/preset-env"]]
     }
   }
 }
